--- a/index.html
+++ b/index.html
@@ -308,8 +308,12 @@ function cross()
 document.getElementById("menu").style.display="none"
 document.getElementById("menubtn").innerHTML='<font style="float:left;position:fixed;top:100px;font-size:20px;left:10px;"onclick="menu()"id="menubt">&#9776</font>'
 }
-
+function print1() 
+  {
+   window.print()
+   } 
 </script>
+<button onclick="print1()">print</button>
 </body>
 </html>
 <h1>
